--- a/app/src/main/res/menu/current_weather_menu.xml
+++ b/app/src/main/res/menu/current_weather_menu.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_five_day_forecast"
-        android:title="@string/action_five_day_forecast"
-        android:icon="@drawable/ic_action_five_day_forecast"
-        app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:id="@+id/action_five_day_forecast"-->
+<!--        android:title="@string/action_five_day_forecast"-->
+<!--        android:icon="@drawable/ic_action_five_day_forecast"-->
+<!--        app:showAsAction="ifRoom" />-->
 
-    <item
-        android:id="@+id/action_share"
-        android:title="@string/action_share"
-        android:icon="@drawable/ic_action_share"
-        app:showAsAction="never" />
+<!--    <item-->
+<!--        android:id="@+id/action_share"-->
+<!--        android:title="@string/action_share"-->
+<!--        android:icon="@drawable/ic_action_share"-->
+<!--        app:showAsAction="never" />-->
 
 </menu>
