--- a/app/src/main/res/layout/fragment_media_player.xml
+++ b/app/src/main/res/layout/fragment_media_player.xml
@@ -14,6 +14,18 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
+        <Spinner
+            android:id="@+id/songsSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/ll_wrapper_main"/>
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/songsRecyclerView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_above="@+id/ll_wrapper_main"/>-->
+
         <ImageView
             android:layout_width="300dp"
             android:layout_height="300dp"
