--- a/app/src/main/res/menu/bottom_nav_view.xml
+++ b/app/src/main/res/menu/bottom_nav_view.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/current_weather"
-        android:title="Home"
-        android:icon="@drawable/ic_action_home" />
+        android:title="Media Player"
+        android:icon="@drawable/ic_action_media_player" />
     <item
         android:id="@+id/five_day_forecast"
         android:title="Search"
