--- a/app/src/main/res/menu/bottom_nav_view.xml
+++ b/app/src/main/res/menu/bottom_nav_view.xml
@@ -7,7 +7,7 @@
         android:title="Media Player"
         android:icon="@drawable/ic_action_media_player" />
     <item
-        android:id="@+id/five_day_forecast"
+        android:id="@+id/track_search"
         android:title="Search"
         android:icon="@drawable/ic_action_search" />
     <item
