--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -20,6 +20,15 @@
         android:name="edu.oregonstate.cs492.assignment4.ui.FiveDayForecastFragment" />
 
     <fragment
+        android:id="@+id/track_search"
+        android:name="edu.oregonstate.cs492.assignment4.ui.TrackSearchFragment"
+        android:label="@string/label_track_search">
+        <action
+            android:id="@+id/navigate_to_lyrics"
+            app:destination="@id/current_weather" />
+    </fragment>
+
+    <fragment
         android:id="@+id/settings"
         android:label="@string/label_settings"
         android:name="edu.oregonstate.cs492.assignment4.ui.SettingsFragment" />
