--- a/app/src/main/res/layout/fragment_track_detail.xml
+++ b/app/src/main/res/layout/fragment_track_detail.xml
@@ -14,6 +14,12 @@
         android:textAppearance="?attr/textAppearanceHeadline4"
         android:layout_marginBottom="2dp" />
 
+<!--    <TextView-->
+<!--        android:id="@+id/tv_artist_name"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textAppearance="?attr/textAppearanceHeadline5"/>-->
+
     <TextView
         android:id="@+id/tv_track_rating"
         android:layout_width="wrap_content"
