--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory android:title="@string/pref_category_forecast">
-        <EditTextPreference
-            android:key="@string/pref_city_key"
-            android:title="@string/pref_city_title"
-            app:useSimpleSummaryProvider="true" />
+<!--        <EditTextPreference-->
+<!--            android:key="@string/pref_city_key"-->
+<!--            android:title="@string/pref_city_title"-->
+<!--            app:useSimpleSummaryProvider="true" />-->
 
         <ListPreference
             android:key="@string/pref_units_key"
